# mstock

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint-dev.sh  env.credentials  pyproject.toml
.devcontainer/: devcontainer.json
core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
mstock_app/: apps.py
side_project/: apps.py
