[tool.poetry]
name = "side_project"
version = "0.1.0"
description = ""
authors = ["Alceu-wv <alceu.wv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
django_rest_schemas = "^1.0.1"
djangorestframework = "^3.14"
psycopg2 = "^2.9.3"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
